Fixed bio image on mobile, added caption

--- a/stylesMain.css
+++ b/stylesMain.css
@@ -137,12 +137,6 @@ p, li {
     list-style-position: inside; /* https://www.w3schools.com/css/css_list.asp */
     margin-left: 0;
 }
-hr {
-    margin: 1.5vw 15vw;
-}
-figcaption {    /* centers text beneath the bio images */
-    text-align: center;
-}
 
 /* Background Colours and Gradient Settings */
 .shade {
@@ -166,6 +160,17 @@ figcaption {    /* centers text beneath the bio images */
 }
 
 /* Styles for Specific Items */
+hr {
+    margin: 1.5vw 15vw;
+}
+figure {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
+}
+figcaption {    /* centers text beneath the bio images */
+    text-align: center;
+}
 .right {    /* for right-aligned text */
     text-align: right;
 }
@@ -188,10 +193,12 @@ section { /* Some padding around all main items */
 .bio > article { /* Allows to change up the order between Desktop and Mobile */
     order:2;
 }
-.bio > img { /* Image and space settings for the bio pic */
+.bio > figure { /* Image and space settings for the bio pic */
     order:1;
-    max-height: 500px;
     margin:  0 3vw 0 0 ;
+}
+.biopic > img {
+    max-height: 500px;
 }
 .pagepic { /* Settings for the vertical banner images */
     margin: 0 1vw 0 1vw;
@@ -322,10 +329,20 @@ Details at https://www.w3schools.com/howto/howto_css_flip_image.asp
     .YesMob { /* Shows mobile-only elements */
         display:initial;
     }
+    #Team {
+        padding: 3vw;
+    }
     .bookNow { /* Changes the button height for condensed viewing */
         height: 120px;
     }
     hr {
         margin: 8vw 15vw;
+    }
+    .bio {
+        align-items: center;
+    }
+    .bio > figure { /* Image and space settings for the bio pic */
+        order: 1;
+        margin: 0;
     }
 }
